--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <main class="container shadow">
-    <div class="row align-items-center">
+    <div class="row col-sm-reverse align-items-center">
       <div class="col-4 left-bg">
         <div class="card-front my-4">
           <h3 class="text-white card-number">0000 0000 0000 0000</h3>
@@ -36,7 +36,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="name">Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Enter your name">
+                  <input class="form-control" id="nameField" type="text" placeholder="Enter your name">
                 </div>
               </div>
             </div>
@@ -46,7 +46,8 @@
                 <div class="form-group">
                   <label for="ccnumber">Credit Card Number</label>
                   <div class="input-group">
-                    <input class="form-control" type="text" placeholder="0000 0000 0000 0000" autocomplete="email">
+                    <input id="card-num" class="form-control" type="text" placeholder="0000 0000 0000 0000"
+                      autocomplete="email">
                     <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="mdi mdi-credit-card"></i>
@@ -102,8 +103,8 @@
 
           </div>
           <div class="card-footer">
-            <button class="btn-black" type="submit">
-              <i class="mdi mdi-gamepad-circle"></i> Continue</button>
+            <button id="btn-confirm" class="btn-black" type="submit">
+              <i class="mdi mdi-gamepad-circle"></i> Confirm</button>
           </div>
         </div>
       </div>
