--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
     <div class="row col-sm-reverse align-items-center">
       <div class="col-4 left-bg">
         <div class="card-front my-4">
-          <h3 class="text-white card-number">0000 0000 0000 0000</h3>
+          <h3 id="card-num" class="text-white card-number">0000 0000 0000 0000</h3>
           <div class="d-flex justify-content-between px-4 text-white my-3">
-            <h5>Card Holder</h5>
-            <h5>09/25</h5>
+            <h5 id="card-name">Card Holder</h5>
+            <h5><span id="card-months">09</span>/<span id="card-year">25</span></h5>
           </div>
         </div>
         <div class="card-back my-4">
-          <h5 class="cvv">123</h5>
-
+          <h5 id="card-cvv" class="cvv">123</h5>
         </div>
       </div>
       <div class="col-8">
@@ -36,7 +35,7 @@
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="name">Name</label>
-                  <input class="form-control" id="nameField" type="text" placeholder="Enter your name">
+                  <input class="form-control" id="nameField" type="text" placeholder="Enter your name" required>
                 </div>
               </div>
             </div>
@@ -46,8 +45,8 @@
                 <div class="form-group">
                   <label for="ccnumber">Credit Card Number</label>
                   <div class="input-group">
-                    <input id="card-num" class="form-control" type="text" placeholder="0000 0000 0000 0000"
-                      autocomplete="email">
+                    <input id="card-num-input" class="form-control" type="number" placeholder="0000 0000 0000 0000"
+                      autocomplete="email" required>
                     <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="mdi mdi-credit-card"></i>
@@ -61,7 +60,7 @@
             <div class="row">
               <div class="form-group col-sm-4">
                 <label for="ccmonth">Month</label>
-                <select class="form-control" id="ccmonth">
+                <select class="form-control" id="ccmonth" required>
                   <option>1</option>
                   <option>2</option>
                   <option>3</option>
@@ -78,7 +77,7 @@
               </div>
               <div class="form-group col-sm-4">
                 <label for="ccyear">Year</label>
-                <select class="form-control" id="ccyear">
+                <select class="form-control" id="ccyear" required>
                   <option>2014</option>
                   <option>2015</option>
                   <option>2016</option>
@@ -91,12 +90,17 @@
                   <option>2023</option>
                   <option>2024</option>
                   <option>2025</option>
+                  <option>2026</option>
+                  <option>2027</option>
+                  <option>2028</option>
+                  <option>2029</option>
+                  <option>2030</option>
                 </select>
               </div>
               <div class="col-sm-4">
                 <div class="form-group">
                   <label for="cvv">CVV/CVC</label>
-                  <input class="form-control" id="cvv" type="text" placeholder="123">
+                  <input class="form-control" id="cvv" type="number" placeholder="123" required>
                 </div>
               </div>
             </div>
